環境変数の設定

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,3 +25,4 @@ jobs:
         run: npm run generate-docs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
