--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -27,6 +27,7 @@ jobs:
         run: npm install
 
       - name: Run Documentation Generation
-        run: npm run generate-docs
-        env:
-          PR_TITLE: ${{ $(gh pr view $PR_URL --json title | jq -r ".title") }}
+        run: |
+          title=$(gh pr view $PR_URL --json title | jq -r ".title")
+          echo "PR_TITLE=$title" >> $GITHUB_ENV
+          npm run generate-docs
