--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,14 +1,13 @@
 name: Generate Documentation
 
 on:
-  push:
-    branches:
-      - master
+  pull_request:
+    types:
+      - closed
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-  PR_URL: ${{ github.event.pull_request.html_url }}
 
 jobs:
   build:
@@ -28,4 +27,5 @@ jobs:
 
       - name: Run Documentation Generation
         run: |
-          echo ${{ github.event.pull_request.html_url }}
+          echo ${{ github.event.pull_request.merged }}
+          echo ${{ github.event.pull_request.title }}
