--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -27,5 +27,9 @@ jobs:
 
       - name: Run Documentation Generation
         run: |
-          echo ${{ github.event.pull_request.merged }}
-          echo ${{ github.event.pull_request.title }}
+          if [ "${{ github.event.pull_request.merged }}" = "true" ]; then
+            npm run generate-docs
+          fi
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
+          PR_BODY: ${{ github.event.pull_request.body }}
