--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "auto-release-note",
   "version": "1.0.0",
   "main": "openai-init.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate-docs": "node generate-docs.js"
@@ -11,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@notionhq/client": "^2.2.14",
     "dotenv": "^16.3.2",
     "openai": "^4.25.0"
   },
