--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,10 +22,8 @@ jobs:
         run: npm install
 
       - name: Run Documentation Generation
-        run: |
-          if [ "${{ github.event.pull_request.merged }}" = "true" ]; then
-            npm run generate-docs
-          fi
+        if: ${{ github.event.pull_request.merged }}
+        run: npm run generate-docs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
